@@ -1,3 +1,6 @@
+2005-04-24  Brian Wellington <bwelling@xbill.org>
+	* common/gtk/guimap.[ch]: Add guimap_find_hex().
+
 2005-04-20  Brian Wellington <bwelling@xbill.org>
 	* client/ai/greedy.c: Fix a problem with the AI's monopoly card
 	support.
